<resources>
    <string name="app_name">CoverLock</string>
    <string name="app_desc">Lock and Cover!</string>

    <string name="srv_name">CoverLockService</string>
    <string name="srv_desc">Monitoring proximity sensor</string>

    <string name="toggleAdmin">Armed</string>
    <string name="toggleService">Enabled</string>

    <string name="prefActionLock">Lock when covered</string>
    <string name="prefLockDelay">Lock delay</string>
    <string name="prefLockDistance">Lock distance</string>
    <string name="prefActionWake">Wake when uncovered</string>
    <string name="prefWakeDelay">Wake delay</string>
    <string name="prefWakeDistance">Wake distance</string>
    <string name="prefPauseHeadset">Pause while headset connected</string>
    <string name="prefPauseLandscape">Pause in landscape orientation</string>
    <string name="prefStartOnBoot">Start service on boot</string>
    <string name="prefVibrate">Vibrate</string>

    <string name="btnPause">Pause</string>
    <string name="btnResume">Resume</string>

    <string name="adminEnabled">CoverLock is now a device admin</string>
    <string name="adminError">Device admin request failed</string>
</resources>
