<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="ActionLock"
        app:title="@string/prefActionLock" />

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="ActionWake"
        app:title="@string/prefActionWake" />

    <SwitchPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="PauseHeadset"
        app:title="@string/prefPauseHeadset" />

    <SwitchPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="PauseLandscape"
        app:title="@string/prefPauseLandscape" />

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="StartOnBoot"
        app:title="@string/prefStartOnBoot" />

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="Vibrate"
        app:title="@string/prefVibrate" />
</PreferenceScreen>
